# lib_spatialindex

./: .gitignore  CMakeLists.txt
cmake/: PackageConfig.cmake.in  util.cmake
include/spatialindex/tools/: Tools.h
opt/: folders.csv
src/: CMakeLists.txt
test/: CMakeLists.txt
